# QtAgOpenGPS

./: .gitignore  .qmake.stash  0002-added-ToolsWindow-icons.patch  BranchNotes.md  CMakeLists.txt  ControlsOverlay.qml  IconButton.qml  IconButtonText.qml  LICENSE  Makefile  QtAgOpenGPS.pro  README.md  SectionButton.qml  TODO.txt  Wedel.txt  agopengps.qrc  aogiface_property.h  aogproperties.cpp  aogproperty.cpp  aogproperty.h  aogrenderer.cpp  aogrenderer.h  aogsettings.cpp  aogsettings.h  brightness notes.txt  btnenum.h  common.h  formgps.cpp  formgps.h  formgps.ui  formgps_classcallbacks.cpp  formgps_guidesigner.cpp  formgps_opengl.cpp  formgps_position.cpp  formgps_saveopen.cpp  formgps_sections.cpp  formgps_serial.cpp  formgps_settings.cpp  formgps_sim.cpp  formgps_udpcomm.cpp  (+50 more)
QtAgIO/: CMakeLists.txt  IORouter.h  SerialConnection.h  agio.qrc  agioproperties.cpp  agioproperty.cpp  agioproperty.h  agiosettings.cpp  agiosettings.h  formloop.cpp  formloop.h  formloop_formudp.cpp  formloop_nmea.cpp  formloop_ntripcomm.cpp  formloop_settings.cpp  formloop_udpcomm.cpp  formloop_ui.cpp  formudp.h  formudp_udp.cpp  interfaceproperty.h  main.cpp  oldsettings.txt  properties.h  qmlsettings.cpp  qmlsettings.h  qmlsettings_addkeys.cpp
QtAgIO/inc/: CScanReply.h  CTraffic.h  IORouter.h  PacketHandler.h  UdpComm.h  UdpConnection.h  UdpListener.h  UdpSender.h  agiosettings.h  formloop.h  glm.h
QtAgIO/qml/: AdvancedMenu.qml  AgDiag.qml  AgIOInterface.qml  AgIOTheme.qml  CloseAgIO.qml  EthernetConfig.qml  GPSInfo.qml  Main.qml  NTrip.qml  SettingsWindow.qml  UnitConversion.qml
QtAgIO/qml/components/: ButtonColor.qml  CheckBoxCustomized.qml  ComboBoxCustomized.qml  IconButtonTransparent.qml  Message.qml  OutlineText.qml  ScrollableTextArea.qml  SectionButton.qml  SectionButtons.qml  Spacer.qml  SpinBoxCustomized.qml  SpinBoxFusion.qml  SpinBoxKM.qml  SpinBoxM.qml  Text.qml  TimedMessage.qml  TimedRectangle.qml  TitleFrame.qml
QtAgIO/qml/interfaces/: NTripInterface.qml
QtAgIO/src/: CScanReply.cpp  CTraffic.cpp  Connection.h  IORouter.cpp  PacketHandler.cpp  UdpComm.cpp  UdpConnection.cpp  UdpListener.cpp  UdpSender.cpp  agiosettings.cpp  formloop.cpp  formloop_nmea.cpp  formloop_ntripcomm.cpp  formloop_udpcomm.cpp
android/: AndroidManifest.xml  build.gradle
classes/: cabcurve.cpp  cabcurve.h  cabline.cpp  cabline.h  cahrs.cpp  cahrs.h  cboundary.cpp  cboundary.h  cboundarylines.cpp  cboundarylines.h  cboundarylist.cpp  cboundarylist.h  ccamera.cpp  ccamera.h  ccontour.cpp  ccontour.h  cdubins.cpp  cdubins.h  cfence.cpp  cfielddata.cpp  cfielddata.h  cflag.cpp  cflag.h  cgeofence.cpp  cgeofence.h  cgeofencelines.cpp  cgeofencelines.h  cguidance.cpp  cguidance.h  chead.cpp  chead.h  cheadline.cpp  cheadline.h  cheadlines.cpp  cheadlines.h  cmazegrid.cpp  cmazegrid.h  cmazepath.cpp  cmazepath.h  cmodulecomm.cpp  (+52 more)
images/Images/: z_Lift_Up.xcf  z_ReverseArrow.xcf
qml/: ABCurvePicker.qml  ABLinePicker.qml  AOGInterface.qml  AOGInterface.qml.autosave  AOGRenderer.qml  AOGTheme.qml  BoundaryMenu.qml  BoundaryTable.qml  ButtonColor.qml  CSimForm.qml  CSimForm.qmlc  CloseAOG.qml  ComboBoxCustomized.qml  Compass.qml  Config.qml  Config.qml.autosave  ConfigDisplay.qml  ConfigFeatures.qml  ConfigImplement.qml  ConfigImplementAxle.qml  ConfigImplementDimensions.qml  ConfigImplementFrontDimensions.qml  ConfigImplementOffset.qml  ConfigImplementRearDimensions.qml  ConfigImplementSections.qml  ConfigImplementSectionsSection.qml  ConfigImplementSectionsZones.qml  ConfigImplementSwitches.qml  ConfigImplementTBTDimensions.qml  ConfigImplementTiming.qml  ConfigImplementTrailingDimensions.qml  ConfigModules.qml  ConfigModulesPins.qml  ConfigSources.qml  ConfigSourcesRoll.qml  ConfigTractor.qml  ConfigTractorAntenna.qml  ConfigTractorDimensions.qml  ConfigTractorSteerSettings.qml  ConfigTrams.qml  (+90 more)
qml/boundary/: BoundaryMenu.qml  BoundaryRecord.qml  BoundaryTable.qml  BoundaryType.qml
qml/components/: ButtonColor.qml  ComboBoxCustomized.qml  ExpandableColumn.qml  IconButton.qml  IconButtonColor.qml  IconButtonLayout.qml  IconButtonText.qml  IconButtonTextBeside.qml  IconButtonTransparent.qml  LatLonTextField.qml  MainWindowBtns.qml  MoveableDialog.qml  MoveablePopup.qml  NumberTextField.qml  OutlineText.qml  PinButtons.qml  ScrollViewExpandableColumn.qml  SectionButton.qml  SectionButtons.qml  ShortcutCustomized.qml  SliderCustomized.qml  SpinBoxCM.qml  SpinBoxCustomized.qml  SpinBoxDecimal.qml  SpinBoxDouble.qml  SpinBoxFusion.qml  SpinBoxKM.qml  SpinBoxM.qml  SpinBoxOneDecimal.qml  SpinBoxTwoDecimal.qml  TestSectionButtons.qml  TextLine.qml  TimedMessage.qml  TimedRectangle.qml  TitleFrame.qml  TopLine.qml  What_Are_Components.txt
qml/config/: Config.qml  ConfigDisplay.qml  ConfigFeatures.qml  ConfigImplement.qml  ConfigImplementAxle.qml  ConfigImplementFrontDimensions.qml  ConfigImplementOffset.qml  ConfigImplementRearDimensions.qml  ConfigImplementSections.qml  ConfigImplementSectionsSection.qml  ConfigImplementSectionsZones.qml  ConfigImplementSwitches.qml  ConfigImplementTBTDimensions.qml  ConfigImplementTiming.qml  ConfigImplementTrailingDimensions.qml  ConfigModules.qml  ConfigModulesPins.qml  ConfigSources.qml  ConfigSourcesRoll.qml  ConfigTractorAntenna.qml  ConfigTractorDimensions.qml  ConfigTractorSteerSettings.qml  ConfigTrams.qml  ConfigVehicleAntenna.qml  ConfigVehicleDimensions.qml  ConfigVehiclePicker.qml  ConfigVehicleSteerSettings.qml  ConfigVehicleType.qml  ConfigWhichVehicle.qml  ConfigYouTurn.qml
qml/field/: FieldData.qml  FieldFromExisting.qml  FieldFromKML.qml  FieldMenu.qml  FieldNew.qml  FieldOpen.qml  FieldTable.qml  FieldToolsMenu.qml
qml/interfaces/: BoundaryInterface.qml  FieldInterface.qml  LinesInterface.qml  RecordedPathInterface.qml  RecordedPathInterface.qml.autosave  TracksInterface.qml  VehicleInterface.qml
shaders/: color_fshader.fsh  color_line.fsh  color_line.vsh  color_vshader.vsh  colors_fshader.fsh  colors_vshader.vsh  colortex_fshader.fsh  colortex_vshader.vsh  thick_fshader.fsh  thick_gshader.gsh  thick_vshader.vsh  worldgrid.vsh
(+25 files in other folders)
